--- a/Sudoku/Sudoku.html
+++ b/Sudoku/Sudoku.html
@@ -13,6 +13,9 @@
     <![endif]-->
 </head>
 <body>
+    <div>
+        <button onclick="Sudoku.solve()">Resolver</button>
+    </div>
     <section id="page">
         <div id="sTable"></div>
     </section>
